--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=BuildPitchDeck
 APP_ENV=production
 APP_KEY=base64:1437VdTRwQsJAD/SEYCBsa4xubaUlIlLyD7ZBMamVAA=
 APP_DEBUG=true
