--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 APP_NAME=BuildPitchDeck
 APP_ENV=production
+VITE_APP_URL=https://buildpitchdeck.com
+ASSET_URL=https://buildpitchdeck.com
 APP_KEY=base64:1437VdTRwQsJAD/SEYCBsa4xubaUlIlLyD7ZBMamVAA=
 APP_DEBUG=true
 APP_URL=https://buildpitchdeck.com/
