remove public/build from gitignore

--- a/.env
+++ b/.env
@@ -25,9 +25,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=buildpitchdeck-db.cypm02u2k2pi.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=buildpitchdeck_db
-DB_USERNAME=admin
-DB_PASSWORD=LTs5AEyDbKwva4BAVEdm
+DB_DATABASE=buildpitchdeck
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
