--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=BuildPitchDeck
+APP_ENV=production
+VITE_APP_URL=https://buildpitchdeck.com
+ASSET_URL=https://buildpitchdeck.com
 APP_KEY=base64:1437VdTRwQsJAD/SEYCBsa4xubaUlIlLyD7ZBMamVAA=
 APP_DEBUG=true
-APP_URL=http://localhost/bpd
+APP_URL=https://buildpitchdeck.com/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,11 +23,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=buildpitchdeck-db.cypm02u2k2pi.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=buildpitchdeck
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=buildpitchdeck_db
+DB_USERNAME=admin
+DB_PASSWORD=LTs5AEyDbKwva4BAVEdm
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -49,17 +51,17 @@ REDIS_PORT=6379
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.mail.us-east-1.awsapps.com
+MAIL_PORT=465
+MAIL_USERNAME="support@buildpitchdeck.com"
+MAIL_PASSWORD="CkhWBGx9EKAQXizcjxWF"
+MAIL_FROM_ADDRESS="support@buildpitchdeck.com"
+MAIL_FROM_NAME="BuildPitchDeck"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=AKIAYQNJSWWU2MEVSJGU
+AWS_SECRET_ACCESS_KEY=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
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_BUCKET=buildpitchdeck
+AWS_USE_PATH_STYLE_ENDPOINT=true
 
-VITE_APP_NAME="${APP_NAME}"
+VITE_APP_NAME="BuildPitchDeck"
